src/test/resources/de/monticore/umlcd4a/cocos/mcg2ebnf/valid/C4A63.cd
package de.monticore.umlcd4a.cocos.mcg2ebnf.valid;

classdiagram C4A63 {
	class A {
		String a;
	}
	class B;
}
